--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress run --browser chrome",
+    "cy:dash" : "npx cypress run --record --key 00c7d1b9-8e4d-4713-b26a-3b9c5d65c378"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alinegirardi/teste-ebac-ui-2.git"
